--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@ ckpts/
 wandb/
 results/
 
-
+media/tts_generated/
+media/tts_spectrograms/
+api/media/tts_generated/
+api/media/tts_spectrograms/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -69,7 +72,7 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
+#db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
