--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+media/tts_generated/
+media/tts_spectrograms/
+api/media/tts_generated/
+api/media/tts_spectrograms/
+
